fix the alignment in the editor

--- a/css/sass/includes/_content.scss
+++ b/css/sass/includes/_content.scss
@@ -12,6 +12,7 @@
         height: 220px;
         position: relative;
         background: $chalk;
+        margin-bottom: 20px;
 
         .created-by {
           display: block;
