--- a/css/sass/includes/_editor.scss
+++ b/css/sass/includes/_editor.scss
@@ -4,6 +4,7 @@
 	margin-top: 50px;
 	display: block;
 	text-align: center;
+	height: 0;
 
 	.block {
 		width: 32%;
