--- a/css/stylesheets/screen.css
+++ b/css/stylesheets/screen.css
@@ -216,8 +216,9 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   height: 220px;
   position: relative;
   background: #F3F2F2;
+  margin-bottom: 20px;
 }
-/* line 16, ../sass/includes/_content.scss */
+/* line 17, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .column3 .created-by, #content-wrapper .container12 .row .column4 .created-by {
   display: block;
   text-decoration: none;
@@ -236,7 +237,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
-/* line 31, ../sass/includes/_content.scss */
+/* line 32, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .column3 .scrib-pop, #content-wrapper .container12 .row .column4 .scrib-pop {
   position: absolute;
   top: 0;
@@ -252,7 +253,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   transition: all 0.2s ease;
   text-align: center;
 }
-/* line 42, ../sass/includes/_content.scss */
+/* line 43, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .column3 .scrib-pop .view-scrib, #content-wrapper .container12 .row .column4 .scrib-pop .view-scrib {
   color: #222222;
   text-decoration: none;
@@ -262,7 +263,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   background: white;
   line-height: 225px;
 }
-/* line 53, ../sass/includes/_content.scss */
+/* line 54, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .column3 .scrib-info, #content-wrapper .container12 .row .column4 .scrib-info {
   position: absolute;
   bottom: 0;
@@ -275,7 +276,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
-/* line 61, ../sass/includes/_content.scss */
+/* line 62, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .column3 .scrib-info a, #content-wrapper .container12 .row .column4 .scrib-info a {
   text-decoration: none;
   background: white;
@@ -286,19 +287,19 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   display: inline-block;
   color: #222222;
 }
-/* line 71, ../sass/includes/_content.scss */
+/* line 72, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .column3 .scrib-info a i, #content-wrapper .container12 .row .column4 .scrib-info a i {
   font-size: 13px;
 }
-/* line 77, ../sass/includes/_content.scss */
+/* line 78, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .column3:hover .scrib-pop, #content-wrapper .container12 .row .column4:hover .scrib-pop {
   opacity: 1;
 }
-/* line 81, ../sass/includes/_content.scss */
+/* line 82, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .column3:hover .scrib-info, #content-wrapper .container12 .row .column4:hover .scrib-info {
   opacity: 1;
 }
-/* line 87, ../sass/includes/_content.scss */
+/* line 88, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .explore a {
   font-family: "Inconsolata";
   text-decoration: none;
@@ -306,7 +307,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   color: #222222;
   padding: 3px 7px;
 }
-/* line 95, ../sass/includes/_content.scss */
+/* line 96, ../sass/includes/_content.scss */
 #content-wrapper .container12 .row .explore .active {
   background: #F3F2F2;
   color: #222222;
@@ -483,8 +484,9 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   margin-top: 50px;
   display: block;
   text-align: center;
+  height: 0;
 }
-/* line 8, ../sass/includes/_editor.scss */
+/* line 9, ../sass/includes/_editor.scss */
 #editor-layout .block {
   width: 32%;
   display: inline-block;
@@ -492,7 +494,7 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   text-align: left;
   cursor: text;
 }
-/* line 15, ../sass/includes/_editor.scss */
+/* line 16, ../sass/includes/_editor.scss */
 #editor-layout .block textarea {
   background: #F3F2F2;
   border: none;
@@ -500,36 +502,36 @@ header #header-wrapper .user a, header #header-wrapper .user .username, header #
   width: 100%;
   height: 380px;
 }
-/* line 22, ../sass/includes/_editor.scss */
+/* line 23, ../sass/includes/_editor.scss */
 #editor-layout .block textarea:focus {
   outline: none;
 }
-/* line 27, ../sass/includes/_editor.scss */
+/* line 28, ../sass/includes/_editor.scss */
 #editor-layout .block:nth-child(2) {
   margin: 0 1%;
 }
-/* line 31, ../sass/includes/_editor.scss */
+/* line 32, ../sass/includes/_editor.scss */
 #editor-layout .block .editor-info {
   padding: 10px;
   background: #F3F2F2;
   position: relative;
 }
-/* line 40, ../sass/includes/_editor.scss */
+/* line 41, ../sass/includes/_editor.scss */
 #editor-layout .block .editor-info .editor-settings p {
   font-family: "Inconsolata";
 }
-/* line 45, ../sass/includes/_editor.scss */
+/* line 46, ../sass/includes/_editor.scss */
 #editor-layout .block .editor-info .editor-settings a {
   color: #222222;
   text-decoration: none;
 }
-/* line 49, ../sass/includes/_editor.scss */
+/* line 50, ../sass/includes/_editor.scss */
 #editor-layout .block .editor-info .editor-settings a .fa-cog {
   position: absolute;
   right: 15px;
   top: 11px;
 }
-/* line 58, ../sass/includes/_editor.scss */
+/* line 59, ../sass/includes/_editor.scss */
 #editor-layout .block .CodeMirror {
   padding: 10px 0;
   text-align: left;
